--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+                "node_modules/primeicons/primeicons.css",
+                "node_modules/primeflex/primeflex.css",
+                "src/styles.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -90,7 +92,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+               "node_modules/primeicons/primeicons.css",
+               "node_modules/primeflex/primeflex.css",
+               "src/styles.css"
             ],
             "scripts": []
           }
