--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nguniversal/common": "^16.2.0",
     "@primeng/themes": "^19.1.3",
     "@techiediaries/ngx-qrcode": "^9.1.0",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "@zxing/ngx-scanner": "^19.0.0",
     "aframe": "^0.1.3",
     "angular-local-storage": "^0.7.1",
