--- a/angular.json
+++ b/angular.json
@@ -31,12 +31,7 @@
                 "node_modules/primeflex/primeflex.css",
                 "src/styles.css"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
