--- a/package.json
+++ b/package.json
@@ -26,15 +26,13 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.13",
-    "@nguniversal/common": "^16.2.0",
     "@primeng/themes": "^19.1.3",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "@zxing/ngx-scanner": "^19.0.0",
-    "aframe": "^0.1.3",
+    "aframe": "^1.7.1",
     "angular-local-storage": "^0.7.1",
-    "angular2-signaturepad": "^4.0.2",
     "ar.js": "^2.2.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -46,14 +44,13 @@
     "front-proyect-husrt": "file:",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
-    "ngx-qrcode2": "^9.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "quill": "^2.0.0",
     "rxjs": "~7.8.0",
     "select2": "^4.1.0-rc.0",
-    "sweetalert2": "^11.6.13",
+    "sweetalert2": "^11.26.4",
     "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
@@ -65,14 +62,16 @@
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
-    "jasmine-core": "~5.6.0",
+    "@types/jasmine": "^5.1.0",
+    "@types/jest": "^30.0.0",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^18.19.130",
+    "jasmine-core": "^5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
+    "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.3"
   }
 }
