--- a/angular.json
+++ b/angular.json
@@ -27,11 +27,13 @@
               }
             ],
             "styles": [
-                "node_modules/primeicons/primeicons.css",
-                "node_modules/primeflex/primeflex.css",
-                "src/styles.css"
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeflex/primeflex.css",
+              "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -87,9 +89,9 @@
               }
             ],
             "styles": [
-               "node_modules/primeicons/primeicons.css",
-               "node_modules/primeflex/primeflex.css",
-               "src/styles.css"
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeflex/primeflex.css",
+              "src/styles.css"
             ],
             "scripts": []
           }
