--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.13",
+    "@popperjs/core": "^2.11.8",
     "@primeng/themes": "^19.1.3",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "@zxing/browser": "^0.1.5",
