--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "file-server": "^2.2.1",
     "front-proyect-husrt": "file:",
     "jquery": "^3.7.1",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "jwt-decode": "^4.0.0",
     "ngx-qrcode2": "^9.0.0",
     "primeflex": "^3.3.1",
@@ -53,6 +55,7 @@
     "quill": "^2.0.0",
     "rxjs": "~7.8.0",
     "select2": "^4.1.0-rc.0",
+    "signature_pad": "^5.1.3",
     "sweetalert2": "^11.6.13",
     "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
@@ -66,6 +69,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
