--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "file-server": "^2.2.1",
     "front-proyect-husrt": "file:",
     "jquery": "^3.7.1",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "jwt-decode": "^4.0.0",
     "ngx-qrcode2": "^9.0.0",
     "primeflex": "^3.3.1",
